--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Basic Three.js Exercise</title>
 </head>
 <body>
-    <h1>Hello World! This has changed</h1>
+    <canvas id="three-canvas"></canvas>
+    <script src="bundle.js"></script>
 </body>
 </html>
